src/objects/KYC_Detail__c.object
<CustomObject>
    <description>This Object is for KYC details</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>Enter Your Address</description>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>KYC Details</relationshipLabel>
        <relationshipName>KYC_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <displayFormat>KYC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PAN_Number__c</fullName>
        <description>Enter the Pan number</description>
        <label>PAN No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>KYC Detail</label>
    <nameField>
        <label>KYC Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KYC Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>